[package]
name = "uptechstar-rs"
version = "0.1.0"
edition = "2024"

description = "A Rust library for interacting with hardware components on embedded systems, specifically designed for use with Uptech's hardware."
repository = "https://github.com/Kazu-Kusa/uptechstar-rs"
license-file = "LICENSE"
keywords = ["embedded", "hardware", "sensors"]
categories = ["embedded"]

[dependencies]
libloading = "0.8.8"
log = "0.4.27"
once_cell = "1.21.3"
tempfile = "3.20.0"